2009-04-29    Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/include/confdefs.h, libblock/include/rtems/bdbuf.h: Changed
	type of rtems_bdbuf_pool_configuration_size to size_t.
	
	* libblock/include/rtems/bdbuf.h, libblock/include/rtems/blkdev.h,
	libblock/include/rtems/diskdevs.h, libblock/src/bdbuf.c,
	libblock/src/blkdev.c, libblock/src/diskdevs.c: Buffer pool
	allocation is now cache aligned.  The cache functions are
	currently not available on all platforms so the cache line size is
	fixed to 32 bytes for now.  Changed various integer types which
	refer to block sizes, numbers and indexes.  Fixed logical block
	indexes in buffer get and read function.  It is now possible to
	delete logical disks.  Modified documentation

2009-04-29	Chris Johns <chrisj@rtems.org>

	* libcsupport/include/rtems/libio.h: Add rtems_off64_t for
	internal use. Update the internal off_t to the 64bit offset.

	* libnetworking/lib/ftpfs.c, libnetworking/lib/tftpDriver.c,
	libfs/src/nfsclient/src/nfs.c, libfs/src/imfs/imfs_fifo.c,
	libfs/src/imfs/memfile.c, libfs/src/imfs/imfs_directory.c,
	libfs/src/imfs/imfs.h, libfs/src/imfs/deviceio.c: Change off_t to
	rtems_off64_t.

	* libmisc/shell/main_msdosfmt.c: Add an info level so the format
	code can tell the user what is happening. Add more options to
	control the format configuration.

	* libfs/src/dosfs/msdos_format.c: Add a print function to display
	the format progress and print statements. Select a better default
	cluster size depending on the size of the disk. This lowers the
	size of the FAT on large disks. Read and maintain the MRB
	partition information.

	* libfs/src/dosfs/dosfs.h, libfs/src/dosfs/fat.h,
	libfs/src/dosfs/fat_file.c, libfs/src/dosfs/fat_file.h,
	libfs/src/dosfs/msdos.h, libfs/src/dosfs/msdos_conv.c,
	libfs/src/dosfs/msdos_create.c, libfs/src/dosfs/msdos_file.c,
	libfs/src/dosfs/msdos_handlers_dir.c,
	libfs/src/dosfs/msdos_handlers_file.c,